--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-    "dependencies": {
-        "cors": "^2.8.4",
-        "express": "^4.15.4"
-    },
+    "dependencies": {},
     "name": "serve-data-to-clients",
     "version": "0.0.1",
     "description": "Serve data to clients",
